Use logo image in header

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -23,6 +23,15 @@
   letter-spacing: 0.5px;
   text-align: center;
   justify-self: center;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logoImage {
+  height: 48px;
+  width: auto;
+  object-fit: contain;
 }
 
 .navLinks {
