--- a/src/pages/AboutStJohn.module.css
+++ b/src/pages/AboutStJohn.module.css
@@ -8,6 +8,11 @@
   padding: 3.5rem 0;
 }
 
+.heroContent {
+  text-align: center;
+  max-width: 880px;
+}
+
 .kicker {
   text-transform: uppercase;
   letter-spacing: 0.12em;
